--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@ $color-primary-dark: #28b485;
 
 $color-grey-dark: #777;
 $color-white: #fff;
+$color-black: #000;
 
 *,
 *::after,
@@ -41,26 +42,28 @@ body {
   position: relative;
 
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+  &__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem;
+  }
+  
+  &__logo {
+    height: 3.5rem;
+  }
+  
+  &__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  
+  }
 }
 
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-}
 
-.header__logo {
-  height: 3.5rem;
-}
-
-.header__text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-
-}
 
 .heading-primary {
   color: $color-white;
@@ -68,30 +71,32 @@ body {
 
   backface-visibility: hidden;
   margin-bottom: 6rem;
+
+  &--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+  
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+  
+    /* animation-delay: 3s;
+    animation-iteration-count: 3; */
+  }
+  
+  &--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.75rem;
+  
+    animation: moveInRight 1s ease-out;
+  }
 }
 
-.heading-primary--main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
 
-  animation-name: moveInLeft;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-
-  /* animation-delay: 3s;
-  animation-iteration-count: 3; */
-}
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 1.75rem;
-
-  animation: moveInRight 1s ease-out;
-}
 
 @keyframes moveInLeft {
   0% {
@@ -137,8 +142,9 @@ body {
   }
 }
 
-.btn:link,
-.btn:visited {
+.btn {
+&:link,
+&:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
@@ -150,22 +156,33 @@ body {
 
 }
 
-.btn:hover {
+&:hover {
   transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+  box-shadow: 0 1rem 2rem rgba($color-black, .2);
+
+
+
+&::after {
+    transform: scalex(1.4) scaleY(1.6);
+    opacity: 0;
+  }
 }
 
-.btn:active {
+&:active {
   transform: translateY(-1px);
-  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+  box-shadow: 0 .5rem 1rem rgba($color-black, .2);
 }
 
-.btn--white {
+&--white {
   background-color: $color-white;
   color: $color-grey-dark;
+
+  &::after {
+    background-color: $color-white;
+  }
 }
 
-.btn::after {
+&::after {
   content: "";
   display: inline-block;
   height: 100%;
@@ -178,17 +195,9 @@ body {
   transition: all .4s;
 }
 
-.btn--white::after {
-  background-color: $color-white;
-}
-
-.btn:hover::after {
-  transform: scalex(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
-.btn--animated {
+&--animated {
   animation: moveInBottom .5s ease-out .32s;
   animation-fill-mode: backwards;
 
+}
 }
