--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,8 @@ body {
   border: none;
   border-bottom: 3px solid transparent;
   width: 90%;
-  display: block; }
+  display: block;
+  transition: all .3s; }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -361,7 +362,8 @@ body {
 
 .form__input:placeholder-shown + .form__label {
   opacity: 0;
-  visibility: hidden; }
+  visibility: hidden;
+  transform: translateY(-4rem); }
 
 .story {
   width: 75%;
