--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -9,10 +9,31 @@
 
     &__content {
         @include absCenter;
-        width: 65%;
-        height: 50rem;
+        width: 75%;
         background-color: $color-white;
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
-        
+        border-radius: 3px;
+        display: table;
+        overflow: hidden;
+    }
+
+    &__left {
+        width: 33.333333%;
+        display: table-cell;
+    }
+
+    &__right {
+        width: 66.666667%;
+        display: table-cell;
+        vertical-align: middle;
+    }
+
+    &__img {
+        display: block;
+        width: 100%;
+    }
+
+    &__text {
+
     }
 }
