--- a/css/style.css
+++ b/css/style.css
@@ -356,10 +356,18 @@ body {
   .popup__right {
     width: 66.666667%;
     display: table-cell;
-    vertical-align: middle; }
+    vertical-align: middle;
+    padding: 3rem 5rem; }
   .popup__img {
     display: block;
     width: 100%; }
+  .popup__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #eee;
+    hyphens: auto; }
 
 .form__group:not(:last-child) {
   margin-bottom: 2rem; }
