--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -26,6 +26,7 @@
         width: 66.666667%;
         display: table-cell;
         vertical-align: middle;
+        padding: 3rem 5rem;
     }
 
     &__img {
@@ -34,6 +35,20 @@
     }
 
     &__text {
+        font-size: 1.4rem;
+        margin-bottom: 4rem;
 
+        -moz-column-count: 2;
+        -moz-column-gap: 4rem; 
+        -moz-column-rule: 1px solid $color-grey-light-2;
+
+        column-count: 2;
+        column-gap: 4rem; // Default 1em = 14px (based on font-size of current element)
+        column-rule: 1px solid $color-grey-light-2;
+
+        -moz-hyphens: auto;
+        -ms-hyphens: auto;
+        -webkit-hyphens: auto;
+        hyphens: auto;
     }
 }
